# managment

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/DB/: database.py
src/models/: CallEventStatus.py  ComplaintIssue.py  IncomingCallEvent.py  branch.py  complaint.py  inCall.py  lunch.py  manager.py  meet.py  notification.py  office.py  outCall.py  roomLock.py  user.py
src/routers/Athentication/: addSuperAdmin.py  user_services.py
src/routers/Athentication/api/: admin_register.py  login.py
src/routers/CRM/: crm.py  repstatus.py
src/routers/CRM/complaint/: complaint.py  import_data.py
src/routers/admin/: admin_dashboard.py  excel.py  lunch.py  meeting_room.py  offices.py  report.py  room_lock.py  user_managment.py
src/routers/user/: user_changepass.py  user_dashboard.py  user_lunch.py  user_meetingroom.py  user_notification.py
src/schemas/: lunch.py  user.py
templates/: login.html  lunch_menu.html  lunch_menu_manage.html  lunch_order.html  lunch_report.html
templates/admin/: admin_dashboard.html  admin_menu.html  locked_rooms.html  lunch_report.html  meetingroom.html  offices.html  users_management.html
templates/crm/: Customer_complaint_list.html  complaint_report.html
templates/user/: CRM.html  crm_report.html  crm_status_report.html  lunch.html  reservation.html  user_dashboard.html  user_lunch.html  user_meetingroom.html
