[tool.poetry]
name = "ml-managment"
version = "0.1.0"
description = ""
authors = ["arezoo ghiami <ghiamiarezoo@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
dotenv = "^0.9.9"
jose = "^1.0.0"
psycopg = "^3.2.9"
passlib = "^1.7.4"
jinja2 = "^3.1.6"
v = "^1"
python-multipart = "^0.0.20"
pandas = "^2.3.1"
jdatetime = "^5.2.0"
openpyxl = "^3.1.5"
starlette = "^0.47.1"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
